* Hidden overflow-x. Fix bug#43386.

--- a/module/project/css/kanban.ui.css
+++ b/module/project/css/kanban.ui.css
@@ -8,3 +8,5 @@
 .card-suffix {min-width: 46px;}
 
 .card-heading .text-black {max-width: 90%}
+
+#mainContent div.kanban-list {overflow-x: hidden}
